# calorimeter

./: CMakeLists.txt  calorimeter.cpp
asm/: patch.S  symbols.S
include/patch/: patch.h
scripts/: generate_symbols.sh  hexdump_wrapper.sh  objdump_wrapper.sh
src/: calorimeter.cpp  main.cpp  patch.cpp
